syntax = "proto3";

package filebrowser.v1;

service UserService {
  rpc List (UserServiceListRequest) returns (UserServiceListResponse) {};
}

message UserServiceListRequest {
  int64 start = 1;
  int64 limit = 2;
}

message UserServiceListResponse {
  repeated User users = 1;
  int64 total = 2;
}

message User {
  int64 id = 1;
  string name = 2;
  string login = 3;
  string home = 4;
}